# cosmic-applet-host

./: Cargo.toml  Makefile
cosmic-applet-host/: Cargo.toml
cosmic-applet-host-config/: Cargo.toml
cosmic-applet-host-config/src/: lib.rs
cosmic-applet-host/src/: dbus.rs  main.rs  space.rs
debian/: changelog  control  copyright  rules
