[package]
name = "cosmic-applet-host-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.29" , features = ["client", "unstable_protocols"] }
anyhow = "1.0.53"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
xdg = "2.4.0"
#xdg-shell-wrapper-config = { path = "../../xdg-shell-wrapper/xdg-shell-wrapper-config"}
xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper" }
